--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Create a new list</h1>
 <%= simple_form_for [ @list ] do |f| %>
   <%= f.input :name %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit "Create list", class: "btn btn-primary" %>
 <% end %>
 <%= link_to "Cancel", lists_path %>
