--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,11 @@
-<h1><%= @list.name %></h1>
+<div class="card-category" style=height: 30vh; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url( cl_image_path @article.photo.key, height: 300, crop: :fill)>  <div class="container">
+    <h1><strong><%= @list.name.capitalize %></strong></h1>
+  </div>
+</div>
+<br>
 <p>put the movies here</p>
 <%= link_to "Add a bookmark", new_list_bookmark_path(@list) %>
+
 
 <% @list.bookmarks.each do |bookmark| %>
   <div class="card" style="width: 18rem;">
